# alsof

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  monitor.py  pid.py  pyproject.toml  trace_cmd.py
src/: README.md
src/alsof/: app.py  cli.py  monitor.py  pid.py  strace.py  strace_cmd.py  utils.py
src/alsof/backend/: lsof.py  psutil.py  strace.py  strace_cmd.py
src/alsof/ui/: app.py  detail_screen.py  log_screen.py  tui.py
src/alsof/util/: pid.py  short_path.py
src/aslof/: monitor.py  strace.py  strace_cmd.py
src/lsoph/: cli.py  log.py  monitor.py
src/lsoph/backend/: base.py  lsof.py  psutil.py  strace.py  strace_cmd.py
src/lsoph/backend/lsof/: __init__.py  backend.py  helpers.py
src/lsoph/backend/psutil/: backend.py
src/lsoph/backend/strace/: __init__.py  backend.py  handlers.py  helpers.py  parse.py  parser_defs.py  stream.py  syscall.py  terminate.py
src/lsoph/monitor/: _monitor.py  task.py
src/lsoph/ui/: app.css  app.py  detail_screen.py  emoji.py  file_data_table.py  log_screen.py
src/lsoph/util/: fifo.py  pid.py  short_path.py  string.py  versioned.py
tests/backend/strace/: test_parse_line.py
tests/utils/: test_c_str_to_bytes.py  test_short_path.py
